@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2010-06-10"
+#define RUBY_RELEASE_DATE "2010-06-16"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20100610
-#define RUBY_PATCHLEVEL 294
+#define RUBY_RELEASE_CODE 20100616
+#define RUBY_PATCHLEVEL 295
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 6
-#define RUBY_RELEASE_DAY 10
+#define RUBY_RELEASE_DAY 16
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
